# watermark-remover

./: .gitignore  DOCUMENTATION.md  RESEARCH_REPORT.md  main.py  pyproject.toml  watermark_detector.py  watermark_remover.py
watermark_remover/: __init__.py  cli.py  config.py  detector.py  inpainter.py  masker.py  models.py  pipeline.py
