[project]
name = "watermark-remover"
version = "0.1.0"
description = "Automatic watermark detection and removal using YOLOv8 + LaMa"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.5.0",
    "simple-lama-inpainting>=0.1.2",
    "ultralytics>=8.4.19",
]

[project.scripts]
watermark-remover = "watermark_remover.cli:main"
