[project]
name = "watermark-remover"
version = "3.0.0"
description = "Automatic watermark removal — YOLO11x + YOLOv8 + SAM + LaMa dual-pass pipeline"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.5.0",
    "segment-anything>=1.0",
    "simple-lama-inpainting>=0.1.2",
    "ultralytics>=8.4.19",
]

[project.scripts]
watermark-remover = "watermark_remover.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
